--- a/src/main/webapp/include/template.xhtml
+++ b/src/main/webapp/include/template.xhtml
@@ -6,54 +6,102 @@
 	xmlns:p="http://primefaces.org/ui">
 
 <h:head>
-	
-	<link rel="stylesheet" href="//fonts.googleapis.com/icon?family=Material+Icons"/>
-	<link href='http://fonts.which is googleapis.com/css?family=Roboto:400,300,300italic,500,400italic,700,700italic' rel='stylesheet' type='text/css'/>
-	<link rel="stylesheet" href="/monitoria-web/css/material.min.css" />
-	<script src="/monitoria-web/js/material.js"></script>
+    <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="description" content="A front-end template that helps you build fast, modern mobile web apps."/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0"/>
+    <title>MONITORIA-IMD</title>
 
-</h:head>
-<h:body class="menubar-hoverable header-fixed ">
-<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-  <header class="mdl-layout__header">
-    <div class="mdl-layout__header-row">
-      <span class="mdl-layout-title">Monitoria</span>
-      <div class="mdl-layout-spacer"></div>
-      <nav class="mdl-navigation">
-                <a class="mdl-navigation__link" href="#">Home</a>
-                <a class="mdl-navigation__link" href="#">Perfil</a>
-                <a class="mdl-navigation__link" href="#">Contatos</a>
-      </nav>
-            
-            <!-- start search form -->
-            <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable">
-                <label class="mdl-button mdl-js-button mdl-button--icon" for="search-expandable">
-                    <i class="material-icons">search</i>
-                </label>
-                <div class="mdl-textfield__expandable-holder">
-                    <input class="mdl-textfield__input" type="text" id="search-expandable" />
-                    <label class="mdl-textfield__label" for="search-expandable">Search text</label>
-                </div>
+    <!-- Add to homescreen for Chrome on Android -->
+    <meta name="mobile-web-app-capable" content="yes"/>
+    <link rel="icon" sizes="192x192" href="/monitoria-web/imagens/android-desktop.png"/>
+
+    <meta name="apple-mobile-web-app-capable" content="yes"/>
+    <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+    <meta name="apple-mobile-web-app-title" content="Material Design Lite"/>
+    <link rel="apple-touch-icon-precomposed" href="/monitoria-web/imagens/ios-desktop.png"/>
+
+    <meta name="msapplication-TileImage" content="images/touch/ms-touch-icon-144x144-precomposed.png"/>
+    <meta name="msapplication-TileColor" content="#3372DF"/>
+
+    <link rel="shortcut icon" href="/monitoria-web/imagens/favicon.png"/>
+
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
+    <link rel="stylesheet" href="/monitoria-web/css/material.min.css"/>
+    <link rel="stylesheet" href="/monitoria-web/css/styles.css"/>
+		    <style>
+		    #view-source {
+		      position: fixed;
+		      display: block;
+		      right: 0;
+		      bottom: 0;
+		      margin-right: 40px;
+		      margin-bottom: 40px;
+		      z-index: 900;
+		    }
+		    </style>
+  </h:head>
+  <h:body>
+    <div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--fixed-header">
+      <header class="demo-header mdl-layout__header mdl-color--grey-100 mdl-color-text--grey-600">
+        <div class="mdl-layout__header-row">
+          <span class="mdl-layout-title">Monitoria</span>
+          <div class="mdl-layout-spacer"></div>
+          <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable">
+            <label class="mdl-button mdl-js-button mdl-button--icon" for="search">
+              <i class="material-icons">search</i>
+            </label>
+            <div class="mdl-textfield__expandable-holder">
+              <input class="mdl-textfield__input" type="text" id="search"/>
+              <label class="mdl-textfield__label" for="search">Enter your query...</label>
             </div>
-            <!-- end search form -->
-            
+          </div>
+          <button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon" id="hdrbtn">
+            <i class="material-icons">more_vert</i>
+          </button>
+          <ul class="mdl-menu mdl-js-menu mdl-js-ripple-effect mdl-menu--bottom-right" >
+            <li class="mdl-menu__item">About</li>
+            <li class="mdl-menu__item">Contact</li>
+            <li class="mdl-menu__item">Legal information</li>
+          </ul>
+        </div>
+      </header>
+      <div class="demo-drawer mdl-layout__drawer mdl-color--blue-grey-900 mdl-color-text--blue-grey-50">
+        <header class="demo-drawer-header">
+          <img src="/monitoria-web/imagens/user.jpg" class="demo-avatar"/>
+          <div class="demo-avatar-dropdown">
+            <span>hello@example.com</span>
+            <div class="mdl-layout-spacer"></div>
+            <button id="accbtn" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon" style="float:right;">
+              <i class="material-icons" role="presentation">arrow_drop_down</i>
+              <span class="visuallyhidden">Accounts</span>
+            </button>
+            <ul class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect" for="accbtn">
+              <li class="mdl-menu__item">hello@example.com</li>
+              <li class="mdl-menu__item">info@example.com</li>
+              <li class="mdl-menu__item"><i class="material-icons">add</i>Add another account...</li>
+            </ul>
+          </div>
+        </header>
+        <nav class="demo-navigation mdl-navigation mdl-color--blue-grey-800">
+          <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">home</i>Home</a>
+          <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">inbox</i>Inbox</a>
+          <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">delete</i>Trash</a>
+          <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">report</i>Spam</a>
+          <div class="mdl-layout-spacer"></div>
+          <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">help_outline</i><span class="visuallyhidden">Help</span></a>
+        </nav>
+      </div>
+      <div class="mdl-layout__content mdl-color--grey-100">
+        <div class="mdl-grid demo-content">
+          <ui:insert name="conteudo">
+            Conteúdo
+          </ui:insert>
+        </div>
+      </div>
     </div>
-  </header>
-    <div class="mdl-layout__drawer">
-    <span class="mdl-layout-title">Monitoria</span>
-    <nav class="mdl-navigation">
-      <a class="mdl-navigation__link" href="#">Duvidas</a>
-      <a class="mdl-navigation__link" href="#">Minhas Duvidas</a>
-      <a class="mdl-navigation__link" href="#">Notificações</a>
-      <a class="mdl-navigation__link" href="#">Ranking</a>
-      <a class="mdl-navigation__link" href="#">Chat</a>
-    </nav>
-  </div>
-  </div>
-  <div class="mdl-grid demo-content">
-	<ui:insert name="conteudo">
-       	Conteúdo
-   	</ui:insert>
-   </div>
-</h:body>
+    <script src="/monitoria-web/js/material.min.js"></script>
+  </h:body>
 </html>
